components/ua/auth-service/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    spec:
      containers:
        - name: auth-service
          image: ghcr.io/isisbusapps/auth-service@sha256:92a676f1cef4bf624e910e23080eb5cf2fe11ad7f38a7ae1433e076bf2f661d0
          ports:
            - containerPort: 5005
