components/ua/auth-service/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    spec:
      containers:
        - name: auth-service
          image: ghcr.io/isisbusapps/auth-service@sha256:57d413daa9d5e15b764bb6e253028e381e0a168f3839c06f5bbf876a79c19757
          ports:
            - containerPort: 5005
