components/ua/auth-service/overlays/dev/enable-debug-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
